<resources>
    <!--Main Menu-->
    <string-array name="menuItems">
        <item>Choose Characters</item>
        <item>Player V.S. Player</item>
        <item>Player V.S. AI</item>
        <item>Score</item>
        <item>Quit</item>
    </string-array>
    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <string name="mainTitle">Tic Tac Toe</string>
    <string name="startButton">Play</string>
    <string name="rulesButton">Rules</string>
    <string name="scoresButton">Scores</string>
    <string name="quitButton">Quit</string>

    <!--Reset Button-->
    <string name="resetButton">Reset</string>
    <string name="title_activity_enter_names">EnterNames</string>

    <!--Game Strings-->
    <string name="currentPlayer">Current Player</string>
    <string name="winStatus"></string>

    <!--Set Names-->
    <string name="p1">Player 1</string>
    <string name="p2">Player 2</string>
    <string name="saika">AI</string>
    <string name="pNameInput">Enter Name</string>
    <string name="saveButton">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--See Scores-->
    <string name="players">Players</string>
    <string name="score">Score</string>
    <string name="zero">0</string>
    <string name="sReset">Reset Score</string>
    <string name="pReset">New Characters</string>
    <string name="splash">Tic Tac Toe</string>
    <string name="splash2">App By Elycia Buckley\nArwork By Charlotte Mahoney</string>
    <string name="splash3">Artwork By Charlotte Mahoney</string>


</resources>