<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scores"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.t00055219.tictacded.Scores"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="2"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="2"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p1"
            android:id="@+id/firstPlayerName"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/playerOneWins"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="2"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p2"
            android:id="@+id/secondPlayerName"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/playerTwoWins"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="15sp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sReset"
            android:id="@+id/scoresReset"
            android:textSize="30sp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pReset"
            android:id="@+id/resetPlayers"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp" />


    </LinearLayout>
</LinearLayout>
