<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_names"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.t00055219.tictacded.EnterNames"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/c_select_back"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <TextView
            android:text="@string/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/p1EnterName"
            android:layout_weight="1"
            android:hint="@string/pNameInput"
            android:textColor="?attr/actionMenuTextColor"
            android:shadowColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:weightSum="5"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ap1"
            android:layout_weight="1"
            android:background="@drawable/char_a_neutral"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bp1"
            android:layout_weight="1"
            android:background="@drawable/char_b_neutral"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cp1"
            android:layout_weight="1"
            android:background="@drawable/char_c_neutral"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dp1"
            android:layout_weight="1"
            android:background="@drawable/char_d_neutral"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ep1"
            android:layout_weight="1"
            android:background="@drawable/char_e_neutral"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/p2EnterName"
            android:layout_weight="1"
            android:hint="@string/pNameInput" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:weightSum="5"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ap2"
            android:layout_weight="1"
            android:background="@drawable/char_a_neutral"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bp2"
            android:layout_weight="1"
            android:background="@drawable/char_b_neutral"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cp2"
            android:layout_weight="1"
            android:background="@drawable/char_c_neutral"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dp2"
            android:layout_weight="1"
            android:background="@drawable/char_d_neutral"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ep2"
            android:layout_weight="1"
            android:background="@drawable/char_e_neutral"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:text="@string/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveNameBtn"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
